[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drawzero"
version = "0.5.3"
authors = [
  { name="Sergey Shashkov", email="sh57@yandex.ru" },
]
description = "A zero-boilerplate canvas drawing framework for Python 3, based on Pygame."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "mkdocs-static-i18n[material]>=1.3.0",
  "pygame>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/ShashkovS/drawzero"
Documentation = "https://drawzero.org/"

[project.optional-dependencies]
dev = [
    "setuptools",
    "build",
    "mkdocs-material",
    "mkdocs-static-i18n[material]",
    "pymdown-extensions",
    "mkdocstrings-python",
    "pytest",
    "coverage",
    "wheel",
    "twine",
]
